--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="glass">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 heroText">
                         <h1 class="heroTitle">Olá, seja bem-vindo(a)!</h1>
-                        <p class="heroDesc">Sou a <b>Patrícia</b>, estudante de programação. <br>Descubra um pouco mais sobre mim.</p>
+                        <p class="heroDesc">Sou a <b>Patrícia</b>, estudante de TI. <br>Descubra um pouco mais sobre mim.</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="row mt-3">
                         <p id="sobreMim">
-                            Passei boa parte da minha vida estudando, mas não programação, Direito! Tenho graduação, especialização, mestrado e doutorado em Direito, mas sempre tive curiosidade para entender o que se esconde por trás das páginas coloridas da web, dos jogos, dos aplicativos. Faz algum tempo que decidi migrar de área de atuação e tentar aliar algum conhecimento jurídico que já possuo ao mundo da programação e ver no que dá. Confesso que não é um dos caminhos mais fáceis, mas parece bem gratificante, ainda mais para alguém movida por curiosidade. Uma coisa já é certa, eu não desisto das minhas metas. No mínimo, sou perseverante.
+                            Passei boa parte da minha vida estudando, mas nada  de TI, Direito! Tenho graduação, especialização, mestrado e doutorado em Direito, mas sempre tive curiosidade para entender o que se esconde por trás das páginas coloridas da web, dos jogos, dos aplicativos. Faz algum tempo que decidi migrar de área de atuação e tentar aliar algum conhecimento jurídico que já possuo ao mundo da programação e ver no que dá. Confesso que não é um dos caminhos mais fáceis, mas parece bem gratificante, ainda mais para alguém movida por curiosidade. Uma coisa já é certa, eu não desisto das minhas metas. No mínimo, sou perseverante.
                         </p>
                     </div>
 
@@ -177,8 +177,7 @@
     <!-- portfolio section -->
     <section id="portfolio">
         <div class="container mb-3">
-            <h2 class="text-center mt-3">Portfolio</h2>
-           
+            <h2 class="text-center mt-3">Portfolio</h2>           
             <div class="row mt-4">
                 <div class="col-lg-6">
                     <div class="card">
