--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="card servicesText">
                         <div class="cardBody">
                             <i class="fa-solid fa-check servicesIcon"></i>
-                            <h3 class="cardTitle mt-3">Advogada</h3>
+                            <h4 class="cardTitle mt-1">Advogada</h4>
                             <p class="cardText mt-3">
                                 Embora, no momento licenciada, sou registrada na Ordem dos Advogados do Brasil, há mais de 20 anos.
                             </p>
@@ -118,7 +118,7 @@
                     <div class="card servicesText">
                         <div class="cardBody">
                             <i class="fa-solid fa-check servicesIcon"></i>
-                            <h3 class="cardTitle mt-3">Professora Universitária</h3>
+                            <h4 class="cardTitle mt-1">Professora Universitária</h4>
                             <p class="cardText mt-3">
                                 Iniciei como professora em 2008. Desde lá, sempre busquei aliar, mesmo nas aulas de Direito Civil, as denominadas metodologias ativas (gamificação etc.). Ser professor é umas das profissões mais gratificantes que existem. No futuro, migrando de carreira, quem sabe consigo ensinar front-end ou back-end para outras pessoas?
                             </p>
@@ -129,7 +129,7 @@
                     <div class="card servicesText">
                         <div class="cardBody">
                             <i class="fa-solid fa-check servicesIcon"></i>
-                            <h3 class="cardTitle mt-3">Coordenadora de Núcleo/Depto</h3>
+                            <h4 class="cardTitle mt-1">Coordenadora de Núcleo/Depto</h4>
                             <p class="cardText mt-3">
                                 Além de professora, já fui coordenadora do Núcleo de Prática Jurídica, Núcleo de Pesquisa Científica, Comitê de Ética em Pesquisa envolvendo Seres Humanos e já atuei como Editora Responsável de uma editora acadêmico-científica.
                             </p>
@@ -142,7 +142,7 @@
                     <div class="card servicesText">
                         <div class="cardBody">
                             <i class="fa-solid fa-check servicesIcon"></i> 
-                            <h3 class="cardTitle mt-3">Técnica em TI "praticante"</h3>
+                            <h4 class="cardTitle mt-1">Técnica em TI "praticante"</h4>
                             <p class="cardText mt-3">
                                 Em todos os locais em que trabalhei, sempre fui aquela colega que dá aquela força na hora de configurar uma impressora, conectar computadores em uma rede, restaurar configurações e outras coisas, que por óbvio,<b> não</b> me qualificam como técnica, mas me dão alguns crédito como proativa e disposta a ajudar.
                             </p>
@@ -153,7 +153,7 @@
                     <div class="card servicesText">
                         <div class="cardBody">
                             <i class="fa-solid fa-check servicesIcon"></i>
-                            <h3 class="cardTitle mt-3">Se está já está quebrado, não custa tentar arrumar!</h3>
+                            <h4 class="cardTitle mt-1">Se está já está quebrado, não custa tentar arrumar!</h4>
                             <p class="cardText mt-3">
                                 Para mim, não há nada que me impeça a desmontar uma cafeteira, um chuveiro, uma máquina de lavar, para tentar consertar algum defeito. As vezes sobram alguns parafusos, mas seguidamente as coisas voltam a funcionar após algumas "intervenções".
                             </p>
@@ -164,7 +164,7 @@
                     <div class="card servicesText">
                         <div class="cardBody">
                             <i class="fa-solid fa-check servicesIcon"></i>
-                            <h3 class="cardTitle mt-3">Criatividade e Curiosidade</h3>
+                            <h4 class="cardTitle mt-1">Criatividade e Curiosidade</h4>
                             <p class="cardText mt-3">
                                 Como seres humanos, pensantes, fomos dotados de um processador muito potente. Nunca subestimo o que o cérebro humano é capaz de criar. Criatividade e curiosidade são ferramentas fundamentais à programação, que, casualmente, possuo.
                             </p>
@@ -236,7 +236,7 @@
             <h2 class="text-center">Contate-me</h2>
             <div class="row mt-4">
                 <div class="col-lg-6">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13814.893320579375!2d-51.21675216756678!3d-30.044794298769222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95197845c45685e1%3A0xfdff0899caaffd3!2sSantana%2C%20Porto%20Alegre%20-%20RS%2C%2090450-190!5e0!3m2!1spt-BR!2sbr!4v1690487290615!5m2!1spt-BR!2sbr" width="550" height="500"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13814.893320579375!2d-51.21675216756678!3d-30.044794298769222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95197845c45685e1%3A0xfdff0899caaffd3!2sSantana%2C%20Porto%20Alegre%20-%20RS%2C%2090450-190!5e0!3m2!1spt-BR!2sbr!4v1690487290615!5m2!1spt-BR!2sbr" width="600" height="550"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-lg-6">
                     <div class="row text-center">
@@ -316,4 +316,4 @@
         </div>
     </footer>
 </body>
-</html>
+</html
