--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/6b94bdd86d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="shortcut icon" href="img/portfolio.png" type="image/x-icon">
     <title>Portfolio Patrícia</title>
+    
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -82,7 +84,7 @@
                         <div class="col-md-6">
                             <ul>
                                 <li>Nome: Patrícia Fernandes Fraga</li>
-                                <li>Idade: 45 anos</li>
+                                <li>Idade: 46 anos</li>
                                 <li>Ocupação: estudante front-end e back-end</li>
                             </ul>
                         </div>
@@ -312,7 +314,7 @@
             </div>
         </div>
         <div class="text-center p-3 footerDev">
-            <p><a  class="navbar-brand" href="https://github.com/patriciafraga" target="_blank" class="linkfinal">Desenvolvido por Patrícia Fernandes Fraga</a></p>
+            <p><a  class="navbar-brand" href="https://github.com/patriciafraga" target="_blank" class="linkfinal">Desenvolvido por Patrícia Fernandes Fraga</a><br>Fonte de imagens: <a href="http://https://support.freepik.com/">Freepik</a></p>
         </div>
     </footer>
 </body>
