alteração navbar-toggler-icon para navbar-dark

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a class="navbar-brand" href="#sobre">Patrícia</a>
 
             <button 
-            class="navbar-toggler" 
+            class="navbar-toggler navbar-dark" 
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
             aria-controls="#navbarSupportedContent"
             aria-expanded="false"
             aria-label="Navegação do toggle"
             >
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon navbar-dark" ></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -291,22 +291,22 @@
     <footer class="text-center text-white">
         <div class="container p-4 pb-0">
             <div class="row mt-4 mb-4">
-                <div class="col-lg-3">
+                <div class="col-lg-3 divIcon">
                     <a href="https://github.com/patriciafraga" target="_blank">
                         <i class="fa-brands fa-github-alt footerIcon"></i>
                     </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 divIcon">
                     <a href="https://www.linkedin.com/in/patricia-ff-aa75bb286/" target="_blank">
                         <i class="fa-brands fa-linkedin footerIcon"></i>
                     </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 divIcon">
                     <a href="https://www.instagram.com/patricia.f.fraga/" target="_blank">
                         <i class="fa-brands fa-instagram footerIcon""></i>
                     </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 divIcon">
                     <a href="https://dashboard.twitch.tv/u/pati_fraga/home" target="_blank">
                         <i class="fa-brands fa-twitch footerIcon"></i>
                     </a>
