alteração de data-bs-toggle  p/fa-solid

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <button 
             class="navbar-toggler navbar-dark" 
-            data-bs-toggle="collapse"
+            data-bs-toggle="fa-solid"
             data-bs-target="#navbarSupportedContent"
             aria-controls="#navbarSupportedContent"
             aria-expanded="false"
