alterações no button toggle

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a class="navbar-brand" href="#sobre">Patrícia</a>
 
             <button 
-            class="navbar-toggler navbar-dark" 
+            class="navbar-toggler navbar-ligth" 
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
             aria-controls="#navbarSupportedContent"
             aria-expanded="false"
             aria-label="Navegação do toggle"
             >
-                <span class="navbar-toggler-icon navbar-dark" ></span>
+                <span class="navbar-toggler-icon navbar-ligth" ></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
