--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/6b94bdd86d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/portfolio.png" type="image/x-icon">
     <title>Portfolio Patrícia</title>
     
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    
 
-    <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top navbarScroll">
 
         <div class="container">
 
             <a class="navbar-brand" href="#sobre">Patrícia</a>
 
             <button 
-            class="navbar-toggler navbar-ligth" 
+            class="navbar-toggler" 
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
             aria-controls="#navbarSupportedContent"
             aria-expanded="false"
             aria-label="Navegação do toggle"
             >
-                <span class="navbar-toggler-icon navbar-ligth" ></span>
+                <span class="navbar-toggler-icon" ></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
